--- a/Trackify/app/src/main/res/layout/playlists_track_drag_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_track_drag_item.xml
@@ -20,20 +20,20 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/cover"
-            android:layout_width="@dimen/common_icon_size"
-            android:layout_height="@dimen/common_icon_size"
-            android:layout_marginTop="@dimen/item_track_cover_margin"
-            android:layout_marginBottom="@dimen/item_track_cover_margin"
+            android:layout_width="@dimen/default_icon_size"
+            android:layout_height="@dimen/default_icon_size"
+            android:layout_marginTop="@dimen/track_cover_margin"
+            android:layout_marginBottom="@dimen/track_cover_margin"
             android:contentDescription="@string/track_cover_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
-            app:srcCompat="@drawable/placeholder_musical_note" />
+            app:srcCompat="@drawable/placeholder_track" />
 
         <TextView
             android:id="@+id/name"
-            style="@style/Track.MainText"
+            style="@style/Track.TextPrimary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -56,7 +56,7 @@
 
         <TextView
             android:id="@+id/artists"
-            style="@style/Track.SecondaryText"
+            style="@style/Track.TextSecondary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -73,6 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/track_drag_description"
             android:padding="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
