--- a/Trackify/app/src/main/res/layout/playlists_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_item.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/item_playlist_width"
+    android:layout_width="@dimen/playlist_width"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/item_playlist_margin"
+    android:layout_margin="@dimen/playlist_margin"
     android:orientation="vertical"
     android:paddingHorizontal="10dp"
     android:paddingVertical="5dp">
@@ -22,7 +22,7 @@
 
     <TextView
         android:id="@+id/name"
-        style="@style/Playlist.MainText"
+        style="@style/Playlist.TextPrimary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
@@ -33,7 +33,7 @@
 
     <TextView
         android:id="@+id/totalTracks"
-        style="@style/Playlist.SecondaryText"
+        style="@style/Playlist.TextSecondary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
