--- a/Trackify/app/src/main/res/layout/playlists_track_header_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_track_header_item.xml
@@ -47,7 +47,7 @@
             android:id="@+id/spotify"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/play_on_spotify" />
+            android:text="@string/spotify_button" />
 
         <TextView
             android:id="@+id/name"
