--- a/Trackify/app/src/main/res/values/colors.xml
+++ b/Trackify/app/src/main/res/values/colors.xml
@@ -8,7 +8,5 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="success">#38EE1C</color>
-
-    <!-- placeholders -->
-    <color name="placeholder_tint">#262626</color>
+    <color name="cover_tint">#262626</color>
 </resources>
