--- a/Trackify/app/src/main/res/values/dimens.xml
+++ b/Trackify/app/src/main/res/values/dimens.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- general purpose -->
-    <dimen name="default_corner_radius">16dp</dimen>
-    <dimen name="common_icon_size">48dp</dimen>
     <dimen name="screen_margin_horizontal">16dp</dimen>
+    <dimen name="default_corner_radius">16dp</dimen>
+    <dimen name="default_icon_size">48dp</dimen>
 
-    <!-- splash layout -->
-    <dimen name="splash_size">200dp</dimen>
+    <!-- playlist -->
+    <dimen name="playlist_cover_padding">75dp</dimen>
+    <dimen name="playlist_margin">5dp</dimen>
+    <dimen name="playlist_width">150dp</dimen>
+    <dimen name="playlist_text_size_primary">14dp</dimen>
+    <dimen name="playlist_text_size_secondary">12dp</dimen>
 
-    <!-- placeholders -->
-    <dimen name="placeholder_track_padding">22dp</dimen>
-    <dimen name="placeholder_playlist_padding">90dp</dimen>
-
-    <!-- item playlist -->
-    <dimen name="item_playlist_title">14dp</dimen>
-    <dimen name="item_playlist_subtitle">12dp</dimen>
-    <dimen name="item_playlist_margin">5dp</dimen>
-    <dimen name="item_playlist_width">150dp</dimen>
-
-    <!-- item track -->
-    <dimen name="item_track_title">13dp</dimen>
-    <dimen name="item_track_subtitle">11dp</dimen>
-    <dimen name="item_track_cover_margin">7dp</dimen>
+    <!-- track -->
+    <dimen name="track_cover_padding">22dp</dimen>
+    <dimen name="track_cover_margin">7dp</dimen>
+    <dimen name="track_text_size_primary">13dp</dimen>
+    <dimen name="track_text_size_secondary">11dp</dimen>
 
     <!-- playlists create layout -->
     <dimen name="playlists_create_layout_padding">16dp</dimen>
