--- a/Trackify/app/src/main/res/layout-sw600dp-land/playlists_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout-sw600dp-land/playlists_create_fragment.xml
@@ -103,7 +103,7 @@
                     android:textSize="@dimen/playlists_create_text_size" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/formSearchButton"
+                    android:id="@+id/search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
