--- a/Trackify/app/src/main/res/layout/playlists_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_create_fragment.xml
@@ -5,14 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvSelectedSongs"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingVertical="@dimen/playlists_create_layout_vertical_padding"
-        tools:itemCount="20"
-        tools:listitem="@layout/playlists_track_drag_item" />
-
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,4 +17,11 @@
             app:menu="@menu/playlists_create_menu" />
     </com.google.android.material.appbar.AppBarLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSelectedSongs"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:itemCount="10"
+        tools:listitem="@layout/playlists_track_drag_item" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
