--- a/Trackify/app/src/main/res/layout/playlists_create_header.xml
+++ b/Trackify/app/src/main/res/layout/playlists_create_header.xml
@@ -78,16 +78,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="@dimen/playlists_create_layout_horizontal_padding"
+        android:paddingVertical="@dimen/playlists_create_layout_vertical_padding"
         android:text="@string/form_selected_songs"
         android:textColor="@color/white"
         android:textSize="@dimen/playlists_create_text_size"
-        android:paddingVertical="@dimen/playlists_create_layout_vertical_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/divider" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/formSearchButton"
+        android:id="@+id/search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
