--- a/Trackify/app/src/main/res/layout/playlists_track_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_track_item.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="4dp"
         app:layout_constraintBottom_toTopOf="@+id/artists"
-        app:layout_constraintEnd_toStartOf="@+id/add"
+        app:layout_constraintEnd_toStartOf="@+id/more"
         app:layout_constraintStart_toEndOf="@+id/cover"
         app:layout_constraintTop_toTopOf="@+id/cover"
         tools:text="@tools:sample/lorem" />
@@ -52,21 +52,21 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/cover"
-        app:layout_constraintEnd_toStartOf="@+id/add"
+        app:layout_constraintEnd_toStartOf="@+id/more"
         app:layout_constraintStart_toEndOf="@+id/explicit"
         app:layout_constraintTop_toBottomOf="@+id/name"
         app:layout_goneMarginStart="0dp"
         tools:text="@tools:sample/lorem" />
 
     <ImageButton
-        android:id="@+id/add"
+        android:id="@+id/more"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="@string/track_add_description"
+        android:contentDescription="@string/track_drag_description"
         android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_music_note_plus" />
+        app:srcCompat="@drawable/ic_more" />
 </androidx.constraintlayout.widget.ConstraintLayout>
