--- a/Trackify/app/src/main/res/values/styles.xml
+++ b/Trackify/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- general purpose -->
     <style name="ShapeAppearanceOverlay.App.CornerSize5Percent" parent="">
         <item name="cornerSize">5%</item>
@@ -34,9 +34,6 @@
         <item name="windowSplashScreenBackground">@color/raisin_black</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo</item>
         <item name="windowSplashScreenAnimationDuration">500</item>
-        <item name="android:windowSplashScreenBrandingImage" tools:ignore="NewApi">
-            @drawable/placeholder_branding
-        </item>
         <item name="postSplashScreenTheme">@style/Theme.Trackify</item>
     </style>
 
