--- a/Trackify/app/src/main/res/layout-w600dp/routes_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout-w600dp/routes_create_fragment.xml
@@ -27,7 +27,7 @@
             android:layout_marginTop="200dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/black"
+            android:background="@android:color/black"
             android:choiceMode="singleChoice"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -130,8 +130,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
