--- a/Trackify/app/src/main/res/layout/playlists_create_header.xml
+++ b/Trackify/app/src/main/res/layout/playlists_create_header.xml
@@ -10,13 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/playlists_create_layout_padding"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@android:color/white"
         android:backgroundTintMode="src_in"
         android:hint="@string/form_title"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/playlists_create_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:paddingVertical="@dimen/playlists_create_layout_vertical_padding"
         android:text="@string/form_duration"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/playlists_create_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:minHeight="48dp"
         android:paddingHorizontal="@dimen/playlists_create_layout_horizontal_padding"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/playlists_create_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/form_min"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/playlists_create_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/playlistDurationField"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +80,7 @@
         android:paddingHorizontal="@dimen/playlists_create_layout_horizontal_padding"
         android:paddingVertical="@dimen/playlists_create_layout_vertical_padding"
         android:text="@string/form_selected_songs"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/playlists_create_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
