--- a/Trackify/app/src/main/res/values-night/themes.xml
+++ b/Trackify/app/src/main/res/values-night/themes.xml
@@ -5,12 +5,12 @@
         <!-- primary color -->
         <item name="colorPrimary">@color/golden_poppy</item>
         <item name="colorPrimaryVariant">@color/sunglow</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@android:color/black</item>
 
         <!-- secondary color -->
         <item name="colorSecondary">@color/green_blue_crayola</item>
         <item name="colorSecondaryVariant">@color/tufts_blue</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorOnSecondary">@android:color/white</item>
 
         <!-- surface color -->
         <!--        <item name="colorSurface">@color/md_theme_dark_surface</item>-->
