--- a/Trackify/app/src/main/res/values/styles.xml
+++ b/Trackify/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
 
     <style name="ThemeOverlay.App.Toolbar" parent="">
         <item name="colorPrimary">@color/raisin_black</item>
-        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorPrimaryVariant">@android:color/black</item>
     </style>
 
     <!-- splash screen -->
