--- a/Trackify/app/src/main/res/layout/activity_main.xml
+++ b/Trackify/app/src/main/res/layout/activity_main.xml
@@ -22,5 +22,5 @@
         android:layout_height="wrap_content"
         app:labelVisibilityMode="selected"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/bottom_menu" />
+        app:menu="@menu/bottom_navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
