--- a/Trackify/app/src/main/res/layout/user_shared_route_item.xml
+++ b/Trackify/app/src/main/res/layout/user_shared_route_item.xml
@@ -1,49 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:paddingStart="15dp"
-    android:paddingEnd="8dp">
+    android:layout_height="wrap_content"
+    android:paddingStart="@dimen/screen_margin_horizontal"
+    android:paddingEnd="@dimen/screen_margin_horizontal">
 
-    <TextView
-        android:id="@+id/userPlaylist"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="PLaylist"
-        app:layout_constraintBottom_toTopOf="@+id/twPlaylistFollowers"
-        app:layout_constraintEnd_toStartOf="@+id/sharedRouteItemShare"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/cover"
+        android:layout_width="@dimen/default_icon_size"
+        android:layout_height="@dimen/default_icon_size"
+        android:layout_marginTop="@dimen/track_cover_margin"
+        android:layout_marginBottom="@dimen/track_cover_margin"
+        android:contentDescription="@string/track_cover_description"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
+        tools:srcCompat="@drawable/placeholder_route" />
 
     <TextView
-        android:id="@+id/twPlaylistFollowers"
+        android:id="@+id/name"
+        style="@style/Inline.TextPrimary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="Followers"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/sharedRouteItemShare"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/followers"
+        app:layout_constraintEnd_toStartOf="@+id/more"
+        app:layout_constraintStart_toEndOf="@+id/cover"
+        app:layout_constraintTop_toTopOf="@+id/cover"
+        tools:text="@tools:sample/lorem" />
+
+    <TextView
+        android:id="@+id/followers"
+        style="@style/Inline.TextSecondary"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintBottom_toBottomOf="@+id/cover"
+        app:layout_constraintEnd_toStartOf="@+id/more"
+        app:layout_constraintStart_toEndOf="@+id/cover"
+        app:layout_constraintTop_toBottomOf="@+id/name"
+        tools:text="@tools:sample/lorem" />
 
     <ImageButton
-        android:id="@+id/sharedRouteItemShare"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="8dp"
+        android:id="@+id/more"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:background="?attr/selectableItemBackgroundBorderless"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/sharedRouteItemDelete"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_share" />
-
-    <ImageButton
-        android:id="@+id/sharedRouteItemDelete"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/track_more_description"
+        android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_delete" />
+        app:srcCompat="@drawable/ic_more" />
 </androidx.constraintlayout.widget.ConstraintLayout>
