--- a/Trackify/app/src/main/res/layout/user_following_item.xml
+++ b/Trackify/app/src/main/res/layout/user_following_item.xml
@@ -7,32 +7,20 @@
     android:paddingEnd="8dp">
 
     <TextView
-        android:id="@+id/tvUsename"
+        android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="User"
-        app:layout_constraintEnd_toStartOf="@+id/imgBtnSeeUserFollowing"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvUserPlaylists"
+        android:id="@+id/sharedPlaylists"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Playlist"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imgBtnSeeUserFollowing"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvUsename" />
-
-    <ImageButton
-        android:id="@+id/imgBtnSeeUserFollowing"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_arrow_forward" />
+        app:layout_constraintTop_toBottomOf="@+id/name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
