--- a/Trackify/app/src/main/res/values/dimens.xml
+++ b/Trackify/app/src/main/res/values/dimens.xml
@@ -18,6 +18,9 @@
     <dimen name="track_text_size_primary">13dp</dimen>
     <dimen name="track_text_size_secondary">11dp</dimen>
 
+    <!-- route -->
+    <dimen name="route_cover_padding">10dp</dimen>
+
     <!-- playlists create layout -->
     <dimen name="playlists_create_layout_padding">16dp</dimen>
     <dimen name="playlists_create_search_layout_padding_bottom">16dp</dimen>
