--- a/Trackify/app/src/main/res/menu/popup_route_menu.xml
+++ b/Trackify/app/src/main/res/menu/popup_route_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/share"
-        android:title="@string/popup_share" />
+        android:title="@string/share" />
     <item
         android:id="@+id/delete"
-        android:title="@string/popup_delete" />
+        android:title="@string/delete" />
 </menu>
