--- a/Trackify/app/src/main/res/menu/toolbar_playlists_create.xml
+++ b/Trackify/app/src/main/res/menu/toolbar_playlists_create.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/savePlaylist"
         android:icon="@drawable/ic_done"
-        android:title="@string/save_playlist_menu"
+        android:title="@string/save"
         app:showAsAction="ifRoom" />
 </menu>
