--- a/Trackify/app/src/main/res/values/dimens.xml
+++ b/Trackify/app/src/main/res/values/dimens.xml
@@ -35,4 +35,8 @@
     <dimen name="playlists_landing_layout_vertical_padding">16dp</dimen>
     <dimen name="playlists_landing_text_size_title">16sp</dimen>
     <dimen name="playlists_landing_text_size_subtitle">14sp</dimen>
+
+    <!-- users landing layout -->
+    <dimen name="user_username_title">20dp</dimen>
+    <dimen name="user_username_followers">12dp</dimen>
 </resources>
