Maps bugfix adjust zoom

--- a/Trackify/app/src/main/res/values/dimens.xml
+++ b/Trackify/app/src/main/res/values/dimens.xml
@@ -39,4 +39,5 @@
     <!-- users landing layout -->
     <dimen name="user_username_title">20dp</dimen>
     <dimen name="user_username_followers">12dp</dimen>
+    <dimen name="user_mapview_height">200dp</dimen>
 </resources>
