--- a/Trackify/app/src/main/res/layout/user_shared_routes_fragment.xml
+++ b/Trackify/app/src/main/res/layout/user_shared_routes_fragment.xml
@@ -9,7 +9,7 @@
         android:id="@+id/mapViewFragment"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="@dimen/user_mapview_height"
         android:layout_weight="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
