improving routes landing

--- a/Trackify/app/src/main/res/layout-sw600dp-land/routes_landing_fragment.xml
+++ b/Trackify/app/src/main/res/layout-sw600dp-land/routes_landing_fragment.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Available Playlists"
+            android:text="Available routes in your current location"
             android:textSize="@dimen/playlist_text_size_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
