Optimized spotify service and bug fixs with the media service

--- a/Trackify/app/src/main/res/layout/login_activity.xml
+++ b/Trackify/app/src/main/res/layout/login_activity.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:backgroundTint="#1D8954"
+        android:backgroundTint="#1DB954"
         android:text="@string/login"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
